remove --add-modules java.xml.bind